XF32 add tests for the pre_checkin

--- a/pytest.ini
+++ b/pytest.ini
@@ -40,6 +40,7 @@ markers =
  NewClientOnly
  OldClientOnly
  bfloat16: Data type
+ xfloat32: Data type
  complexDouble : Data type
  complexSingle : Data type
  double : Data type
