XF32 - use ComputeF32Fast to set the desired Fast Math OP's DataType for the flexibility.

--- a/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_nt.yaml
+++ b/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_nt.yaml
@@ -11,7 +11,7 @@ BenchmarkProblems:
       DataType: s
       DestDataType: s
       ComputeDataType: s
-      ComputeF32FastXF32: True
+      ComputeF32Fast: x
       TransposeA: False
       TransposeB: True
       UseBeta: True
