--- a/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_tn.yaml
+++ b/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_tn.yaml
@@ -12,7 +12,7 @@ BenchmarkProblems:
       DataType: s
       DestDataType: s
       ComputeDataType: s
-      ComputeF32FastXF32: True
+      ComputeF32Fast: x
       TransposeA: True
       TransposeB: False
       UseBeta: True
