--- a/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_tt.yaml
+++ b/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_tt.yaml
@@ -10,7 +10,7 @@ BenchmarkProblems:
       DataType: s
       DestDataType: s
       ComputeDataType: s
-      ComputeF32FastXF32: True
+      ComputeF32Fast: x
       TransposeA: True
       TransposeB: True
       UseBeta: True
