--- a/pytest.ini
+++ b/pytest.ini
@@ -81,6 +81,7 @@ markers =
  zeropad
  bufferload_offset
  mirror_dims
+ compute_f32_fast_xf32
  xfail-gfx000:  architecture
  xfail-gfx900:  architecture
  xfail-gfx906:  architecture
