--- a/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_nn.yaml
+++ b/Tensile/Tests/pre_checkin/compute_f32_fast_xf32/sgemm_xf32_source_nn.yaml
@@ -12,7 +12,7 @@ BenchmarkProblems:
       DataType: s
       DestDataType: s
       ComputeDataType: s
-      ComputeF32Fast: x
+      F32XdlMathOp: x
       TransposeA: False
       TransposeB: False
       UseBeta: True
