--- a/pytest.ini
+++ b/pytest.ini
@@ -80,7 +80,7 @@ markers =
  zeropad
  bufferload_offset
  mirror_dims
- compute_f32_fast_xf32
+ f32_xdl_math_op_xf32
  xfail-gfx000:  architecture
  xfail-gfx900:  architecture
  xfail-gfx906:  architecture
