--- a/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/float_complex_asm_ct.yaml
+++ b/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/float_complex_asm_ct.yaml
@@ -1,35 +1,22 @@
 TestParameters:
-  marks: [emulation, emulation2]
+  marks: [emulation, emulation4]
 
-# benchmark assembly and source kernels
 GlobalParameters:
   MinimumRequiredVersion: 4.2.0
-  CMakeBuildType: Release
-  PrintLevel: 1
-  ForceRedoBenchmarkProblems: True
-  ForceRedoLibraryLogic: True
-  ForceRedoLibraryClient: True
-  EnqueuesPerSync: 1
-  SyncsPerBenchmark: 1
-  NumElementsToValidate: -1
-  BoundsCheck: True
-  ValidationMaxToPrint: 4
-  ValidationPrintValids: False
-  ShortNames: False
-  MergeFiles: True
-  DataInitTypeAB: 3
-  DataInitTypeC: 3
+  NumElementsToValidate: 128
   KernelTime: True
 
 BenchmarkProblems:
-
-  - # sgemm TT
+  - # cgemm CT
     - # ProblemType
       OperationType: GEMM
-      DataType: s
-      DestDataType: s
+      DataType: c
+      DestDataType: c
+      ComputeDataType: c
       TransposeA: True
       TransposeB: True
+      ComplexConjugateA: True
+      ComplexConjugateB: False
       UseBeta: True
       Batched: True
       F32XdlMathOp: x
@@ -39,20 +26,18 @@ BenchmarkProblems:
       BenchmarkCommonParameters:
         - LoopTail: [True]
         - EdgeType: ["ShiftPtr"]
-        - KernelLanguage: ["Source"]
+        - KernelLanguage: ["Assembly"]
       ForkParameters:
         - PrefetchLocalRead: [False]
         - PrefetchGlobalRead: [False]
         - ThreadTile:
-          - [ 3, 5 ]
-          - [ 4, 8 ]
-          - [ 8, 8 ]
+          - [ 2, 4 ]
         - WorkGroup:
-          - [ 16, 16,  1 ]
           - [  8,  8,  1 ]
-        - DepthU: [-3]
+        - DepthU: [8]
         - VectorWidth: [-1]
-        - WorkGroupMapping: [8,4]
+        - AssertSummationElementMultiple: [1,2]
+        - AssertFree0ElementMultiple: [1,2]
       BenchmarkForkParameters:
       JoinParameters:
       BenchmarkJoinParameters:
@@ -60,25 +45,23 @@ BenchmarkProblems:
         - ProblemSizes:
           - Range: [ [127,1,129], 0, [2], [63,1,65] ]
 
-    - # BenchmarkProblemSizeGroup - Assembly
+    - # BenchmarkProblemSizeGroup - Source
       InitialSolutionParameters:
       BenchmarkCommonParameters:
         - LoopTail: [True]
         - EdgeType: ["ShiftPtr"]
+        - KernelLanguage: ["Source"]
       ForkParameters:
-        - KernelLanguage: ["Assembly"]
         - PrefetchLocalRead: [False]
         - PrefetchGlobalRead: [False]
         - ThreadTile:
-          - [ 3, 3 ]
-          - [ 4, 4 ]
-          - [ 5, 5 ]
-          - [ 8, 8 ]
+          - [ 2, 4 ]
         - WorkGroup:
-          - [ 16, 16,  1 ]
           - [  8,  8,  1 ]
-        - DepthU: [-1]
+        - DepthU: [8]
         - VectorWidth: [-1]
+        - AssertSummationElementMultiple: [1,2]
+        - AssertFree0ElementMultiple: [1,2]
       BenchmarkForkParameters:
       JoinParameters:
       BenchmarkJoinParameters:
