--- a/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/float_complex_asm_nt.yaml
+++ b/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/float_complex_asm_nt.yaml
@@ -1,40 +1,22 @@
-# benchmark assembly and source kernels
+TestParameters:
+  marks: [emulation, emulation4]
+
 GlobalParameters:
   MinimumRequiredVersion: 4.2.0
-  CMakeBuildType: Release
-  PrintLevel: 1
-  ForceRedoBenchmarkProblems: True
-  ForceRedoLibraryLogic: True
-  ForceRedoLibraryClient: True
-  EnqueuesPerSync: 1
-  SyncsPerBenchmark: 1
-  NumElementsToValidate: -1
-  BoundsCheck: True
-  ValidationMaxToPrint: 4
-  ValidationPrintValids: False
-  ShortNames: False
-  MergeFiles: True
-  DataInitTypeAB: 3
-  DataInitTypeC: 3
+  NumElementsToValidate: 128
   KernelTime: True
-  NewClient: 2
-  BufferOffsetA: 128
-  BufferOffsetB: 256
-  BufferOffsetC: 384
-  BufferOffsetD: 512
 
 BenchmarkProblems:
-
-  - # sgemm NN
+  - # cgemm TN
     - # ProblemType
       OperationType: GEMM
-      DataType: s
-      DestDataType: s
+      DataType: c
+      DestDataType: c
+      ComputeDataType: c
       TransposeA: False
-      TransposeB: False
+      TransposeB: True
       UseBeta: True
       Batched: True
-      StridedBatched: False
       F32XdlMathOp: x
 
     - # BenchmarkProblemSizeGroup - Assembly
@@ -42,21 +24,18 @@ BenchmarkProblems:
       BenchmarkCommonParameters:
         - LoopTail: [True]
         - EdgeType: ["ShiftPtr"]
-        - KernelLanguage: ["Source"]
+        - KernelLanguage: ["Assembly"]
       ForkParameters:
-        - GlobalSplitU: [1, 3]
         - PrefetchLocalRead: [False]
-        - PrefetchGlobalRead: [True]
+        - PrefetchGlobalRead: [False]
         - ThreadTile:
-          - [ 3, 5 ]
-          - [ 4, 8 ]
-          - [ 8, 8 ]
+          - [ 2, 4 ]
         - WorkGroup:
-          - [ 32,  4,  1 ]
           - [  8,  8,  1 ]
-          - [  4,  8,  4 ]
-        - DepthU: [-3]
+        - DepthU: [8]
         - VectorWidth: [-1]
+        - AssertSummationElementMultiple: [1,2]
+        - AssertFree0ElementMultiple: [1,2]
       BenchmarkForkParameters:
       JoinParameters:
       BenchmarkJoinParameters:
@@ -64,32 +43,26 @@ BenchmarkProblems:
         - ProblemSizes:
           - Range: [ [127,1,129], 0, [2], [63,1,65] ]
 
-    - # BenchmarkProblemSizeGroup - Assembly
+    - # BenchmarkProblemSizeGroup - Source
       InitialSolutionParameters:
       BenchmarkCommonParameters:
         - LoopTail: [True]
         - EdgeType: ["ShiftPtr"]
+        - KernelLanguage: ["Source"]
       ForkParameters:
-        - KernelLanguage: ["Assembly"]
-        - GlobalSplitU: [1, 3]
         - PrefetchLocalRead: [False]
-        - PrefetchGlobalRead: [True]
+        - PrefetchGlobalRead: [False]
         - ThreadTile:
-          - [ 3, 3 ]
-          - [ 4, 4 ]
-          - [ 5, 5 ]
-          - [ 8, 8 ]
+          - [ 2, 4 ]
         - WorkGroup:
-          - [ 16, 16,  1 ]
           - [  8,  8,  1 ]
-          - [  4,  4,  4 ]
-        - DepthU: [-1]
+        - DepthU: [8]
         - VectorWidth: [-1]
+        - AssertSummationElementMultiple: [1,2]
+        - AssertFree0ElementMultiple: [1,2]
       BenchmarkForkParameters:
       JoinParameters:
       BenchmarkJoinParameters:
       BenchmarkFinalParameters:
         - ProblemSizes:
           - Range: [ [127,1,129], 0, [2], [63,1,65] ]
-
-
