--- a/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/sgemm_asm_tt.yaml
+++ b/Tensile/Tests/pre_checkin/f32_xdl_math_op_xf32/sgemm_asm_tt.yaml
@@ -20,16 +20,15 @@ GlobalParameters:
   DataInitTypeAB: 3
   DataInitTypeC: 3
   KernelTime: True
-  NewClient: 2
 
 BenchmarkProblems:
 
-  - # sgemm NT
+  - # sgemm TT
     - # ProblemType
       OperationType: GEMM
       DataType: s
       DestDataType: s
-      TransposeA: False
+      TransposeA: True
       TransposeB: True
       UseBeta: True
       Batched: True
@@ -40,21 +39,20 @@ BenchmarkProblems:
       BenchmarkCommonParameters:
         - LoopTail: [True]
         - EdgeType: ["ShiftPtr"]
-        - KernelLanguage: ["Source"]
+        - KernelLanguage: ["Assembly"]
       ForkParameters:
-        - GlobalSplitU: [1, 3]
-        - PrefetchLocalRead: [True]
-        - PrefetchGlobalRead: [True]
+        - PrefetchLocalRead: [False]
+        - PrefetchGlobalRead: [False]
         - ThreadTile:
           - [ 3, 5 ]
           - [ 4, 8 ]
           - [ 8, 8 ]
         - WorkGroup:
           - [ 16, 16,  1 ]
-          - [  8, 16,  1 ]
-          - [  2,  8,  8 ]
+          - [  8,  8,  1 ]
         - DepthU: [-3]
         - VectorWidth: [-1]
+        - WorkGroupMapping: [8,4]
       BenchmarkForkParameters:
       JoinParameters:
       BenchmarkJoinParameters:
@@ -69,9 +67,8 @@ BenchmarkProblems:
         - EdgeType: ["ShiftPtr"]
       ForkParameters:
         - KernelLanguage: ["Assembly"]
-        - GlobalSplitU: [1, 3]
-        - PrefetchLocalRead: [True]
-        - PrefetchGlobalRead: [True]
+        - PrefetchLocalRead: [False]
+        - PrefetchGlobalRead: [False]
         - ThreadTile:
           - [ 3, 3 ]
           - [ 4, 4 ]
@@ -79,8 +76,7 @@ BenchmarkProblems:
           - [ 8, 8 ]
         - WorkGroup:
           - [ 16, 16,  1 ]
-          - [ 16,  8,  1 ]
-          - [ 16,  2,  8 ]
+          - [  8,  8,  1 ]
         - DepthU: [-1]
         - VectorWidth: [-1]
       BenchmarkForkParameters:
@@ -90,3 +86,28 @@ BenchmarkProblems:
         - ProblemSizes:
           - Range: [ [127,1,129], 0, [2], [63,1,65] ]
 
+    - # BenchmarkProblemSizeGroup - Assembly
+      InitialSolutionParameters:
+      BenchmarkCommonParameters:
+        - LoopTail: [True]
+        - EdgeType: ["ShiftPtr"]
+        - KernelLanguage: ["Source"]
+      ForkParameters:
+        - PrefetchLocalRead: [False]
+        - PrefetchGlobalRead: [False]
+        - ThreadTile:
+          - [ 3, 5 ]
+          - [ 4, 8 ]
+          - [ 8, 8 ]
+        - WorkGroup:
+          - [ 16, 16,  1 ]
+          - [  8,  8,  1 ]
+        - DepthU: [-3]
+        - VectorWidth: [-1]
+        - WorkGroupMapping: [8,4]
+      BenchmarkForkParameters:
+      JoinParameters:
+      BenchmarkJoinParameters:
+      BenchmarkFinalParameters:
+        - ProblemSizes:
+          - Range: [ [127,1,129], 0, [2], [63,1,65] ]
